--- a/app/views/ahw/current/building-route-fail.html
+++ b/app/views/ahw/current/building-route-fail.html
@@ -11,10 +11,10 @@
     text: "prototype",
     classes: "govuk-tag--pink"
     },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
+      html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 
-  <a class="govuk-back-link" href="farmer-type">Back</a>
+  <a class="govuk-back-link" href="building-route">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -26,7 +26,11 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This grant is for farmers raising calves up to the age of 1 year.</p>
+      <p class="govuk-body">All buildings must:</p>
+        <ul class="govuk-list govuk-list--bullet"><li>have adequate drainage</li>
+          <li>be easy-to-clean</li>
+          <li>protect calves from draughts with solid walls/barriers to calf height</li>
+          </ul>
 
 
 
