--- a/app/views/ahw/current/building-route.html
+++ b/app/views/ahw/current/building-route.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Type of farmer
+Calf weight
 {% endblock %}
 
 {% block beforeContent %}
@@ -11,7 +11,7 @@ Type of farmer
     text: "prototype",
     classes: "govuk-tag--pink"
     },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
+      html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
@@ -22,46 +22,41 @@ Type of farmer
   <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-              {{ govukCheckboxes({
-                  idPrefix: 'farmertype',
-                  name: 'farmertype',
+              {{ govukRadios({
+                  idPrefix: 'buildingroute',
+                  name: 'buildingroute',
                   fieldset: {
                       legend: {
-                          text: 'What type of farmer are you?',
+                          text: 'What type of structure is your building?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
-                  hint: {
-                    text: "Select all that apply"
-                  },
+
 
                   items: [
                 {
-                  value: "dairy",
-                  text: "Dairy farmer",
-                  checked: checked("farmertype", "dairy")
+                  value: "aframe",
+                  text: "A-frame building",
+                  checked: checked("buildingroute", "aframe")
                 },
 
                 {
-                  value: "beef",
-                  text: "Beef farmer",
-                  checked: checked("farmertype", "beef")
-                },
-                {
-                  value: "mixed",
-                  text: "Mixed farmer (cattle and arable)",
-                  checked: checked("farmertype", "mixed")
+                  value: "monopitch",
+                  text: "Mono-pitch building",
+                  checked: checked("buildingroute", "monopitch")
                 },
 
                 {
-                  divider: "or"
+                  value: "igloo",
+                  text: "Igloos or hutches grouped together",
+                  checked: checked("buildingroute", "igloo")
                 },
+
                 {
-                  value: "None of the above",
-                  text: "None of the above",
-                  behaviour: "exclusive",
-                  checked: checked("farmertype", "None of the above")
+                  value: "other",
+                  text: "Other",
+                  checked: checked("buildingroute", "other")
 
                 }
               ]
@@ -78,10 +73,13 @@ Type of farmer
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">This grant is for farmers raising calves up to the age of 1 year.<br><br>
+          <p class="govuk-body">All buildings must:</p>
+            <ul class="govuk-list govuk-list--bullet"><li>have adequate drainage</li>
+              <li>be easy-to-clean</li>
+              <li>protect calves from draughts with solid walls/barriers to calf height</li>
+              </ul>
 
-          </p>
-     </div>
+            </div>
    </div>
 
 {% endblock %}
