--- a/app/views/ahw/current/calf-weight.html
+++ b/app/views/ahw/current/calf-weight.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Type of farmer
+Calf weight
 {% endblock %}
 
 {% block beforeContent %}
@@ -11,7 +11,7 @@ Type of farmer
     text: "prototype",
     classes: "govuk-tag--pink"
     },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
+      html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
@@ -22,46 +22,41 @@ Type of farmer
   <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-              {{ govukCheckboxes({
-                  idPrefix: 'farmertype',
-                  name: 'farmertype',
+              {{ govukRadios({
+                  idPrefix: 'calfweight',
+                  name: 'calfweight',
                   fieldset: {
                       legend: {
-                          text: 'What type of farmer are you?',
+                          text: 'What is the average weight of calves that will be housed in the building?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
-                  hint: {
-                    text: "Select all that apply"
-                  },
+
 
                   items: [
                 {
-                  value: "dairy",
-                  text: "Dairy farmer",
-                  checked: checked("farmertype", "dairy")
+                  value: "99",
+                  text: "Under 100kg",
+                  checked: checked("calfweight", "99")
                 },
 
                 {
-                  value: "beef",
-                  text: "Beef farmer",
-                  checked: checked("farmertype", "beef")
-                },
-                {
-                  value: "mixed",
-                  text: "Mixed farmer (cattle and arable)",
-                  checked: checked("farmertype", "mixed")
+                  value: "100 to 150",
+                  text: "Between 100kg and 150kg",
+                  checked: checked("calfweight", "100 to 150")
                 },
 
                 {
-                  divider: "or"
+                  value: "151 to 200",
+                  text: "Between 151kg and 200kg",
+                  checked: checked("calfweight", "151 to 200")
                 },
+
                 {
-                  value: "None of the above",
-                  text: "None of the above",
-                  behaviour: "exclusive",
-                  checked: checked("farmertype", "None of the above")
+                  value: "201",
+                  text: "More than 200kg",
+                  checked: checked("calfweight", "201")
 
                 }
               ]
@@ -78,10 +73,8 @@ Type of farmer
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">This grant is for farmers raising calves up to the age of 1 year.<br><br>
-
-          </p>
-     </div>
+          <p class="govuk-body">Calves must weigh no more than 200kg.</p>
+            </div>
    </div>
 
 {% endblock %}
