--- a/app/views/ahw/current/enrichment.html
+++ b/app/views/ahw/current/enrichment.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Type of farmer
+Straw bedding
 {% endblock %}
 
 {% block beforeContent %}
@@ -11,7 +11,7 @@ Type of farmer
     text: "prototype",
     classes: "govuk-tag--pink"
     },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
+      html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
@@ -22,48 +22,33 @@ Type of farmer
   <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-              {{ govukCheckboxes({
-                  idPrefix: 'farmertype',
-                  name: 'farmertype',
+              {{ govukRadios({
+                  classes: "govuk-radios--inline",
+                  idPrefix: 'enrichment',
+                  name: 'enrichment',
                   fieldset: {
                       legend: {
-                          text: 'What type of farmer are you?',
+                          text: 'Will there be at least one enrichment item per pair or group of calves?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
                   hint: {
-                    text: "Select all that apply"
+                    text: "Not including straw bedding and social contact"
                   },
-
                   items: [
                 {
-                  value: "dairy",
-                  text: "Dairy farmer",
-                  checked: checked("farmertype", "dairy")
+                  value: "yes",
+                  text: "Yes",
+                  checked: checked("enrichment", "yes")
                 },
 
                 {
-                  value: "beef",
-                  text: "Beef farmer",
-                  checked: checked("farmertype", "beef")
-                },
-                {
-                  value: "mixed",
-                  text: "Mixed farmer (cattle and arable)",
-                  checked: checked("farmertype", "mixed")
-                },
-
-                {
-                  divider: "or"
-                },
-                {
-                  value: "None of the above",
-                  text: "None of the above",
-                  behaviour: "exclusive",
-                  checked: checked("farmertype", "None of the above")
-
+                  value: "no",
+                  text: "No",
+                  checked: checked("enrichment", "no")
                 }
+
               ]
               }) }}
 
@@ -78,10 +63,13 @@ Type of farmer
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">This grant is for farmers raising calves up to the age of 1 year.<br><br>
-
-          </p>
-     </div>
+          <p class="govuk-body">Each pair or group of calves must have at least one enrichment item, such as:</p>
+            <ul class="govuk-list govuk-list--bullet"><li>brushes</li>
+              <li>hanging balls</li>
+              <li>salt licks</li>
+              </ul>
+              <p class="govuk-body">This does not include straw bedding and social contact.</p>
+            </div>
    </div>
 
 {% endblock %}
