--- a/app/views/ahw/current/project-about-fail.html
+++ b/app/views/ahw/current/project-about-fail.html
@@ -14,7 +14,7 @@
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
 
-  <a class="govuk-back-link" href="farmer-type">Back</a>
+  <a class="govuk-back-link" href="project-about">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -26,7 +26,11 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This grant is for farmers raising calves up to the age of 1 year.</p>
+      <p class="govuk-body">This grant is for:</p>
+        <ul class="govuk-list govuk-list--bullet"><li>building new calf housing</li>
+          <li>refurbishing or extending existing calf housing</li>
+          </ul>
+
 
 
 
