--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -35,8 +35,8 @@
 
         <p class='govuk-list app-list--definition'>
           <a href='ahw/current/start' class="govuk-link--no-visited-state"><strong>Version 1 (current)</a></strong><br>
-          User journey currently in build, however 'User and business details' section exists. This prototype has not been tested yet. <br>
-            <span class="govuk-body govuk-!-font-size-14">#Last updated on 4 November 2022<br/>
+          Added eligibility journey, user and business details without scoring questions. This prototype has not been tested yet. <br>
+            <span class="govuk-body govuk-!-font-size-14">#Last updated on 5 January 2023<br/>
             </span></p>
 
 
@@ -48,7 +48,10 @@
 
             <p class='govuk-heading-m'>Wireframes</p>
               <p class='govuk-list app-list--definition'>
-                <a href='https://www.sketch.com/s/64be7a81-5611-47c6-9210-1408ec4420c1' class="govuk-link--no-visited-state" target="new" >Sketch wireframes (opens in new tab)</a><br>
-                  <img src="/public/images/sketch-icon.png" alt="Sketch icon" width="17" height="17">Always up to date.</p>
+                <a href='https://app.mural.co/t/dcx6016/m/dcx6016/1668084944498/10dd1e5c4d7aa7711d771f14bd51614cde4a6af9?sender=uac8e5181797d9857544e5168' class="govuk-link--no-visited-state" target="new" >Mural low-fidelity journey (opens in new tab)</a><br>
+                  <img src="/public/images/mural-icon.png" alt="Sketch icon" width="17" height="17">Updated on 5 January 2022.</p>
+                  <p class='govuk-list app-list--definition'>
+                    <a href='https://www.sketch.com/s/64be7a81-5611-47c6-9210-1408ec4420c1' class="govuk-link--no-visited-state" target="new" >Sketch wireframes (opens in new tab)</a><br>
+                      <img src="/public/images/sketch-icon.png" alt="Sketch icon" width="17" height="17">Always up to date.</p>
       </div>
 {% endblock %}
