--- a/app/views/ahw/current/calf-healthy.html
+++ b/app/views/ahw/current/calf-healthy.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Type of farmer
+Calf weight
 {% endblock %}
 
 {% block beforeContent %}
@@ -11,7 +11,7 @@ Type of farmer
     text: "prototype",
     classes: "govuk-tag--pink"
     },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
+      html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
@@ -22,48 +22,40 @@ Type of farmer
   <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-              {{ govukCheckboxes({
-                  idPrefix: 'farmertype',
-                  name: 'farmertype',
+              {{ govukRadios({
+                  idPrefix: 'calfhealthy',
+                  name: 'calfhealthy',
                   fieldset: {
                       legend: {
-                          text: 'What type of farmer are you?',
+                          text: 'Will calves over 7 days old be housed individually?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
-                  hint: {
-                    text: "Select all that apply"
-                  },
 
                   items: [
                 {
-                  value: "dairy",
-                  text: "Dairy farmer",
-                  checked: checked("farmertype", "dairy")
+                  value: "yes",
+                  text: "Yes",
+                  checked: checked("calfhealthy", "yes")
                 },
 
                 {
-                  value: "beef",
-                  text: "Beef farmer",
-                  checked: checked("farmertype", "beef")
-                },
-                {
-                  value: "mixed",
-                  text: "Mixed farmer (cattle and arable)",
-                  checked: checked("farmertype", "mixed")
+                  value: "no",
+                  text: "No",
+                  checked: checked("calfhealthy", "no")
                 },
 
                 {
-                  divider: "or"
-                },
-                {
-                  value: "None of the above",
-                  text: "None of the above",
-                  behaviour: "exclusive",
-                  checked: checked("farmertype", "None of the above")
-
+                  value: "sick",
+                  text: "Only in exceptional circumstance",
+                  checked: checked("calfhealthy", "sick"),
+                  hint: {
+                    text: "For example illness, no other calves of similar age"
+                  }
                 }
+
+
               ]
               }) }}
 
@@ -78,10 +70,9 @@ Type of farmer
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">This grant is for farmers raising calves up to the age of 1 year.<br><br>
-
+          <p class="govuk-body">Healthy calves can only be housed individually in exceptional circumstances (for example, illness or no other calves of similar age).
           </p>
-     </div>
+            </div>
    </div>
 
 {% endblock %}
