--- a/app/views/ahw/current/calf-weight-fail.html
+++ b/app/views/ahw/current/calf-weight-fail.html
@@ -11,10 +11,10 @@
     text: "prototype",
     classes: "govuk-tag--pink"
     },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
+      html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 
-  <a class="govuk-back-link" href="farmer-type">Back</a>
+  <a class="govuk-back-link" href="calf-weight">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -26,8 +26,7 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This grant is for farmers raising calves up to the age of 1 year.</p>
-
+      <p class="govuk-body">Calves must weigh no more than 200kg.</p>
 
 
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
