--- a/app/views/ahw/current/calf-weight-route-fail.html
+++ b/app/views/ahw/current/calf-weight-route-fail.html
@@ -11,10 +11,10 @@
     text: "prototype",
     classes: "govuk-tag--pink"
     },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
+      html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 
-  <a class="govuk-back-link" href="farmer-type">Back</a>
+  <a class="govuk-back-link" href="calf-weight-route">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -26,8 +26,18 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This grant is for farmers raising calves up to the age of 1 year.</p>
+      <p class="govuk-body">
+        {% if data['calfweight'] === '99'  %}
+        Calves weighing up to 100kg must have at least 3m<sup>2</sup> living space.
+        {% elseif data['calfweight'] === '100 to 150' %}
+        Calves weighing between 100kg and 150kg must have at least 4m<sup>2</sup> living space.
 
+        {% else %}
+        Calves weighing between 151kg and 200kg must have at least 5m<sup>2</sup> living space.
+
+        {% endif %}
+
+        </p>
 
 
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
