--- a/app/views/ahw/current/enrichment-fail.html
+++ b/app/views/ahw/current/enrichment-fail.html
@@ -14,7 +14,7 @@
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
 
-  <a class="govuk-back-link" href="farmer-type">Back</a>
+  <a class="govuk-back-link" href="enrichment">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -26,7 +26,12 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This grant is for farmers raising calves up to the age of 1 year.</p>
+      <p class="govuk-body">Each pair or group of calves must have at least one enrichment item, such as:</p>
+        <ul class="govuk-list govuk-list--bullet"><li>brushes</li>
+          <li>hanging balls</li>
+          <li>salt licks</li>
+          </ul>
+          <p class="govuk-body">This does not include straw bedding and social contact.</p>
 
 
 
